Add header component

--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,12 +1,5 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
-    </ion-buttons>
-    <ion-title>Action Sheet</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="action sheet page"></app-header>
 
-<ion-content>
-
+<ion-content padding>
+  <p>Action Sheet Page !</p>
 </ion-content>
