--- a/src/app/pages/alert/alert.page.html
+++ b/src/app/pages/alert/alert.page.html
@@ -1,12 +1,6 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
-    </ion-buttons>
-    <ion-title>Alert</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="alert page"></app-header> <!-- De esta manera envia el string "Alert" -->
+<!-- <app-header [title]="Alert"></app-header> ->  Busca en el page.ts la variable Alert -->
 
-<ion-content>
-
+<ion-content padding>
+  <p>Alert Page!</p>
 </ion-content>
