--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Componentes</ion-title>
-  </ion-toolbar>
-</ion-header>
+<app-header title="componentes"></app-header>
 
 <ion-content padding>
   <ion-button routerLink="/alert">
