Add action sheet

--- a/src/app/pages/action-sheet/action-sheet.page.html
+++ b/src/app/pages/action-sheet/action-sheet.page.html
@@ -1,5 +1,7 @@
 <app-header title="action sheet page"></app-header>
 
 <ion-content padding>
-  <p>Action Sheet Page !</p>
+  <ion-button color="primary" expand="full" (click)="presentActionSheet()">
+    Show Action Sheet
+  </ion-button>
 </ion-content>
