--- a/src/app/pages/segment/segment.page.html
+++ b/src/app/pages/segment/segment.page.html
@@ -14,6 +14,18 @@
   </ion-segment>
 </ion-toolbar>
 <ion-content>
+  <ion-list *ngIf="(superHeroes | async) === null">
+    <ion-item *ngFor="let item of [1,1,1,1,1,1,1,1,1,1,1,1]" class="animated flash slow infinite">
+      <ion-label>
+        <h3><ion-skeleton-text width="70%"></ion-skeleton-text></h3>
+        <p><ion-skeleton-text width="100%"></ion-skeleton-text></p>
+      </ion-label>
+      <ion-label slot="end" text-right>
+        <p style="text-align: -webkit-right;"><ion-skeleton-text width="40%"></ion-skeleton-text></p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
+
   <ion-list>
     <ion-item *ngFor="let hero of (superHeroes | async) | filter: publisher: 'publisher'" class="animated fadeIn fast">
       <ion-label>
